# shoko

./: Cargo.toml  README.md
shoko/: Cargo.toml
shoko/src/: archive.rs  compress.rs  delete.rs  lib.rs  mmem.rs  read.rs  shadow.rs  write.rs
shokoutils/: Cargo.toml  LICENSE  hi.txt  shokoutils-0.1.1-rc1.ebuild  test.sk1
shokoutils/src/: main.rs  skgenkey.rs
