[workspace]
members = [
    "shoko",
    "shokoutils",
]
resolver = "2"

[workspace.package]
version = "0.1.1-git"
edition = "2021"
authors = ["Cyntheria"]
description = "A high-performance, append-only archive format and library"
license = "LGPL-3.0-only"
repository = "https://github.com/cyntheria/shoko"

[workspace.dependencies]
rand = "0.8"
aes-gcm = "0.10"
glob = "0.3"
petgraph = "0.6"
clap = { version = "4.4", features = ["derive"] }
