[workspace]
members = [
    "shoko",
    "shokoutils",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Cyntheria"]
description = "A high-performance, append-only archive format and library"
license = "LGPL-3.0-only"
repository = "https://github.com/cyntheria/shoko"

[workspace.dependencies]
rand = "0.8"
aes-gcm = "0.10"
