[package]
name = "shoko"
version = "0.1.2"
edition = "2021"
authors = ["Cyntheria"]
description = "A high-performance, append-only archive format and library"
license = "LGPL-3.0-only"
repository = "https://github.com/cyntheria/shoko"

[dependencies]
glob = "0.3.3"
log = "0.4"
env_logger = "0.11"
inquire = "0.9.2"
rand = "0.9.2"
aes-gcm.workspace = true
nix = { version = "0.30.1", features = ["mman"] }
