[package]
name = "shokoutils"
version = "0.1.1-git"
edition = "2021"

[dependencies]
shoko = { path = "../shoko" }
petgraph = "0.8.3"
log = "0.4.29"
env_logger = "0.11"
rand.workspace = true
inquire = "0.9.2"

[[bin]]
name = "sar"
path = "src/main.rs"

[[bin]]
name = "skgenkey"
path = "src/skgenkey.rs"
