[package]
name = "shokoutils"
version = "0.1.2"
edition = "2021"
authors = ["Cyntheria"]
description = "The command-line utilities for Shoko."
license = "LGPL-3.0-only"
repository = "https://github.com/cyntheria/shoko"

[dependencies]
shoko = "0.1.1-rc1"
petgraph = "0.8.3"
log = "0.4.29"
env_logger = "0.11"
rand.workspace = true
inquire = "0.9.2"

[[bin]]
name = "sar"
path = "src/main.rs"

[[bin]]
name = "skgenkey"
path = "src/skgenkey.rs"
